examples/invalid/26_nested_pattern_non_exhaustive.lane
// invalid: nested enum payload coverage must still be exhaustive
module Examples.Invalid.NestedPatternNonExhaustive

enum Option[A] {
  none()
  some(A)
}

pub fn bad(value : Option[Option[Int]]) -> Int {
  match value {
    none() => 0
    some(none()) => 1
  }
}
